# time_management

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  ruff.toml
app/: awx_service.py  config.py  index.py  logger.py  main.py  service_base.py  time_manager.py
app/api/v1/: index.py
app/api/v1/remote/: router.py  service.py
diagrams/: components.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml
